fix: telephone input stretch, remove member filter for class students, Add Students count to classrooms list table

--- a/resources/js/assets/auth/css/style.css
+++ b/resources/js/assets/auth/css/style.css
@@ -1,3 +1,7 @@
+.react-tel-input .form-control{
+  width: 100% !important;
+}
+
 /*
  Template Name: Veltrix - Responsive Bootstrap 4 Admin Dashboard
  Author: Themesbrand
